syntax = "proto3";

option go_package=".;calcpb";
package calc;

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int64 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message ComputeMaxRequest {
    int64 number = 1;
}

message ComputeMaxResponse {
    int64 max = 1;
}

service CalculatorService {
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    // Server Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

    // Client Streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    // Bidirectional streaming
    rpc ComputeMax(stream ComputeMaxRequest) returns (stream ComputeMaxResponse) {};
}
